fixed background video on mobile

--- a/style.css
+++ b/style.css
@@ -4,8 +4,8 @@
 
 #BGvideo {
   object-fit: cover;
-  width: 100vw;
-  height: 100vw;
+  width: 100%;
+  height: 100%;
   position: fixed;
   top: 0;
   left: 0;
